Linkwarden for Safari Extension/Resources/custom.css
:root body {
    --pico-font-family-emoji: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    --pico-font-family-sans-serif: system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, Helvetica, Arial, "Helvetica Neue", sans-serif, var(--pico-font-family-emoji);
    --pico-font-family-monospace: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace, var(--pico-font-family-emoji);
    --pico-font-family: var(--pico-font-family-sans-serif);
    --pico-line-height: 1.25;
    --pico-font-weight: 400;
    --pico-font-size: 90%;
    --pico-text-underline-offset: 0.1rem;
    --pico-border-radius: 0.25rem;
    --pico-border-width: 0.0625rem;
    --pico-outline-width: 0.125rem;
    --pico-transition: 0.2s ease-in-out;
    --pico-spacing: 0.75rem;
    --pico-typography-spacing-vertical: 0.75rem;
    --pico-block-spacing-vertical: var(--pico-spacing);
    --pico-block-spacing-horizontal: var(--pico-spacing);
    --pico-grid-column-gap: var(--pico-spacing);
    --pico-grid-row-gap: var(--pico-spacing);
    --pico-form-element-spacing-vertical: 0.5rem;
    --pico-form-element-spacing-horizontal: 0.75rem;
    --pico-form-label-font-weight: 600;
    --pico-group-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
    --pico-group-box-shadow-focus-with-button: 0 0 0 var(--pico-outline-width) var(--pico-primary-focus);
    --pico-group-box-shadow-focus-with-input: 0 0 0 0.0625rem var(--pico-form-element-border-color);
    --pico-modal-overlay-backdrop-filter: blur(0.375rem);
    --pico-nav-element-spacing-vertical: 1rem;
    --pico-nav-element-spacing-horizontal: 0.5rem;
    --pico-nav-link-spacing-vertical: 0.5rem;
    --pico-nav-link-spacing-horizontal: 0.5rem;
    --pico-nav-breadcrumb-divider: ">";
    --pico-icon-checkbox: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(255, 255, 255)' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
    --pico-icon-minus: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(255, 255, 255)' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='5' y1='12' x2='19' y2='12'%3E%3C/line%3E%3C/svg%3E");
    --pico-icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(136, 145, 164)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
    --pico-icon-date: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(136, 145, 164)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='3' y='4' width='18' height='18' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='16' y1='2' x2='16' y2='6'%3E%3C/line%3E%3Cline x1='8' y1='2' x2='8' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='10' x2='21' y2='10'%3E%3C/line%3E%3C/svg%3E");
    --pico-icon-time: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(136, 145, 164)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'%3E%3C/circle%3E%3Cpolyline points='12 6 12 12 16 14'%3E%3C/polyline%3E%3C/svg%3E");
    --pico-icon-search: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(136, 145, 164)' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='11' cy='11' r='8'%3E%3C/circle%3E%3Cline x1='21' y1='21' x2='16.65' y2='16.65'%3E%3C/line%3E%3C/svg%3E");
    --pico-icon-close: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(136, 145, 164)' stroke-width='3' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='18' y1='6' x2='6' y2='18'%3E%3C/line%3E%3Cline x1='6' y1='6' x2='18' y2='18'%3E%3C/line%3E%3C/svg%3E");
    --pico-icon-loading: url("data:image/svg+xml,%3Csvg fill='none' height='24' width='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' %3E%3Cstyle%3E g %7B animation: rotate 2s linear infinite; transform-origin: center center; %7D circle %7B stroke-dasharray: 75,100; stroke-dashoffset: -5; animation: dash 1.5s ease-in-out infinite; stroke-linecap: round; %7D @keyframes rotate %7B 0%25 %7B transform: rotate(0deg); %7D 100%25 %7B transform: rotate(360deg); %7D %7D @keyframes dash %7B 0%25 %7B stroke-dasharray: 1,100; stroke-dashoffset: 0; %7D 50%25 %7B stroke-dasharray: 44.5,100; stroke-dashoffset: -17.5; %7D 100%25 %7B stroke-dasharray: 44.5,100; stroke-dashoffset: -62; %7D %7D %3C/style%3E%3Cg%3E%3Ccircle cx='12' cy='12' r='10' fill='none' stroke='rgb(136, 145, 164)' stroke-width='4' /%3E%3C/g%3E%3C/svg%3E");

    --ss-primary-color: var(--pico-primary-focus);
    --ss-bg-color: var(--pico-background-color);
    --ss-font-color: var(--pico-color);
    --ss-font-placeholder-color: #8d8d8d;
    --ss-disabled-color: #dcdee2;
    --ss-border-color: var(--pico-form-element-border-color);
    --ss-highlight-color: #fffb8c;
    --ss-success-color: #00b755;
    --ss-error-color: #dc3545;
    --ss-focus-color: var(--pico-primary-focus);
    --ss-font-placeholder-color: var(--pico-color);

    // Heights
    --ss-main-height: 30px;
    --ss-content-height: 300px;

    // Spacing
    --ss-spacing-l: 0.35rem;
    --ss-spacing-m: 0.25rem;
    --ss-spacing-s: 0.1rem;

    // Misc
    --ss-animation-timing: 0.1s;
    --ss-border-radius: var(--pico-border-radius);
    }
}
@media (min-width: 576px) {
    :root {
        --pico-font-size: 100%;
    }
}
@media (min-width: 768px) {
    :root {
        --pico-font-size: 100%;
    }
}
@media (min-width: 1024px) {
    :root {
        --pico-font-size: 100%;
    }
}
@media (min-width: 1280px) {
    :root {
        --pico-font-size: 100%;
    }
}
@media (min-width: 1536px) {
    :root {
        --pico-font-size: 100%;
    }
}

a {
    --pico-text-decoration: underline;
}
a.secondary, a.contrast {
    --pico-text-decoration: underline;
}

small {
    --pico-font-size: 0.875em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    --pico-font-weight: 700;
}

h1 {
    --pico-font-size: 2rem;
    --pico-line-height: 1.125;
    --pico-typography-spacing-top: 3rem;
}

h2 {
    --pico-font-size: 1.75rem;
    --pico-line-height: 1.15;
    --pico-typography-spacing-top: 2.625rem;
}

h3 {
    --pico-font-size: 1.5rem;
    --pico-line-height: 1.175;
    --pico-typography-spacing-top: 2.25rem;
}

h4 {
    --pico-font-size: 1.25rem;
    --pico-line-height: 1.2;
    --pico-typography-spacing-top: 1.874rem;
}

h5 {
    --pico-font-size: 1.125rem;
    --pico-line-height: 1.225;
    --pico-typography-spacing-top: 1.6875rem;
}

h6 {
    --pico-font-size: 1rem;
    --pico-line-height: 1.25;
    --pico-typography-spacing-top: 1.5rem;
}

thead th,
thead td,
tfoot th,
tfoot td {
    --pico-font-weight: 600;
    --pico-border-width: 0.1875rem;
}

pre,
code,
kbd,
samp {
    --pico-font-family: var(--pico-font-family-monospace);
}

kbd {
    --pico-font-weight: bolder;
}

input:not([type=submit],
[type=button],
[type=reset],
[type=checkbox],
[type=radio],
[type=file]),
:where(select, textarea) {
    --pico-outline-width: 0.0625rem;
}

[type=search] {
    --pico-border-radius: 5rem;
}

[type=checkbox],
[type=radio] {
    --pico-border-width: 0.125rem;
}

[type=checkbox][role=switch] {
    --pico-border-width: 0.1875rem;
}

details.dropdown summary:not([role=button]) {
    --pico-outline-width: 0.0625rem;
}

nav details.dropdown summary:focus-visible {
    --pico-outline-width: 0.125rem;
}

[role=search] {
    --pico-border-radius: 5rem;
}

[role=search]:has(button.secondary:focus,
[type=submit].secondary:focus,
[type=button].secondary:focus,
[role=button].secondary:focus),
[role=group]:has(button.secondary:focus,
[type=submit].secondary:focus,
[type=button].secondary:focus,
[role=button].secondary:focus) {
    --pico-group-box-shadow-focus-with-button: 0 0 0 var(--pico-outline-width) var(--pico-secondary-focus);
}
[role=search]:has(button.contrast:focus,
[type=submit].contrast:focus,
[type=button].contrast:focus,
[role=button].contrast:focus),
[role=group]:has(button.contrast:focus,
[type=submit].contrast:focus,
[type=button].contrast:focus,
[role=button].contrast:focus) {
    --pico-group-box-shadow-focus-with-button: 0 0 0 var(--pico-outline-width) var(--pico-contrast-focus);
}
[role=search] button,
[role=search] [type=submit],
[role=search] [type=button],
[role=search] [role=button],
[role=group] button,
[role=group] [type=submit],
[role=group] [type=button],
[role=group] [role=button] {
    --pico-form-element-spacing-horizontal: 2rem;
}

details summary[role=button]:not(.outline)::after {
    filter: brightness(0) invert(1);
}

[aria-busy=true]:not(input, select, textarea):is(button, [type=submit], [type=button], [type=reset], [role=button]):not(.outline)::before {
    filter: brightness(0) invert(1);
}

/* Custom styles */
body {
    padding: 1rem;
}

#message {
    text-align: center;
    &:empty {
        display: none;
    }
}

form * {
    /* CSS variables are not being applied here for some reason */
    font-size: 0.85rem !important;
    transition: opacity 0.2s ease-in-out;
}
#save-form {
    transition: opacity 0.2s ease-in-out;
    &[aria-busy="true"] {
        * {
            opacity: 0.5;
        }
        &:before {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%,-50%);
        }
    }
}

#save-form.hidden {
    opacity: 0;
}
.ss-main {
    font-weight: 400;
    padding: var(--pico-form-element-spacing-vertical) var(--pico-form-element-spacing-horizontal);
    padding-right: calc(var(--pico-form-element-spacing-horizontal) + 1.5rem);
    padding-left: calc(var(--pico-form-element-spacing-horizontal) + 1.5rem);
    padding-inline-start: var(--pico-form-element-spacing-horizontal);
    padding-inline-end: var(--pico-form-element-spacing-horizontal);
    margin-bottom: var(--pico-spacing);
    --pico-box-shadow: 0 0 0 var(--pico-outline-width) var(--pico-form-element-focus-color);
    background-image: var(--pico-icon-chevron);
    background-position: center right .75rem;
    background-size: 1rem auto;
    background-repeat: no-repeat;
    &:focus {
        box-shadow: var(--pico-box-shadow);
        border-color: transparent;
    }
    .ss-arrow {
        display: none;
    }
}

.ss-content .ss-list .ss-option:hover, .ss-content .ss-list .ss-option.ss-highlighted, .ss-content .ss-list .ss-option:not(.ss-disabled).ss-selected, .ss-main .ss-values .ss-value .ss-value-text {
    color: var(--pico-primary-inverse);
}
.ss-main .ss-values .ss-value .ss-value-delete svg path, .ss-main .ss-values .ss-value .ss-value-delete svg path {
    stroke: var(--pico-primary-inverse);
}
.ss-content .ss-search input:focus {
    box-shadow: var(--pico-box-shadow);
    border: var(--pico-border-width) solid var(--pico-form-element-active-border-color);
}

